--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,27 +4,44 @@ Title: Statistical Analysis for Random Objects and Non-Euclidean Data
 URL: https://github.com/functionaldata/tFrechet
 BugReports: https://github.com/functionaldata/tFrechet/issues
 Version: 0.1.0
-Language: en, fr, de
 Encoding: UTF-8
-Date: 2020-06-05
-Authors@R: c(person("Yaqing","Chen", role=c("aut","cre"),
-              email = "yaqchen@ucdavis.edu"),
-    person("Alvaro", "Gajardo", role=c("aut")),
-    person("Jianing","Fan", role=c("aut")),
-    person("Qixian", "Zhong", role=c("aut")),
-    person("Paromita", "Dubey", role="aut"),
-    person("Kyunghee","Han", role="aut"),
-    person("Satarupa", "Bhattacharjee", role="aut"),
-    person("Hans-Georg", "Müller", role=c("cph","ths","aut")))
+Date: 2020-06-09
+Authors@R: 
+    c(person(given = "Yaqing",
+             family = "Chen",
+             role = c("aut", "cre"),
+             email = "yaqchen@ucdavis.edu"),
+      person(given = "Alvaro",
+             family = "Gajardo",
+             role = "aut"),
+      person(given = "Jianing",
+             family = "Fan",
+             role = "aut"),
+      person(given = "Qixian",
+             family = "Zhong",
+             role = "aut"),
+      person(given = "Paromita",
+             family = "Dubey",
+             role = "aut"),
+      person(given = "Kyunghee",
+             family = "Han",
+             role = "aut"),
+      person(given = "Satarupa",
+             family = "Bhattacharjee",
+             role = "aut"),
+      person(given = "Hans-Georg",
+             family = "Müller",
+             role = c("cph", "ths", "aut")))
 Maintainer: Yaqing Chen <yaqchen@ucdavis.edu>
-Description: Provides implementation of statistical methods for random objects
+Description: Provides implementation of statistical methods for random objects 
     lying in various metric spaces, which are not necessarily linear spaces. 
     The core of this package is Fréchet regression for random objects with 
     Euclidean predictors, which allows one to perform regression analysis 
     for non-Euclidean responses under some mild conditions. 
     Examples include distributions in L^2-Wasserstein space, 
     covariance matrices endowed with power metric (with Frobenius metric 
-    as a special case), Cholesky and log-Cholesky metrics. 
+    as a special case), Cholesky and log-Cholesky metrics.  
+    References: Petersen, A., & Müller, H.-G. (2019) <doi:10.1214/17-AOS1624>.
 License: BSD_3_clause + file LICENSE
 LazyData: false
 Imports:
@@ -38,4 +55,4 @@ Imports:
 Suggests: 
     Rcpp (>= 0.11.5), 
     testthat
-RoxygenNote: 6.1.1
+RoxygenNote: 7.1.0
