--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,11 +4,14 @@ S3method(plot,denReg)
 export(CovFMean)
 export(CreateCovRegPlot)
 export(CreateDensity)
+export(DenDist)
 export(DenFMean)
 export(GloCovReg)
 export(GloDenReg)
 export(LocCovReg)
 export(LocDenReg)
+export(LocSpheReg)
+export(SpheGeoDist)
 export(color.bar)
 importFrom(Matrix,Matrix)
 importFrom(grDevices,colorRampPalette)
@@ -60,5 +63,6 @@ importFrom(stats,sd)
 importFrom(stats,spline)
 importFrom(stats,var)
 importFrom(stats,weighted.mean)
+importFrom(trust,trust)
 importFrom(utils,head)
 importFrom(utils,tail)
