update W distance function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,7 +4,6 @@ S3method(plot,denReg)
 export(CovFMean)
 export(CreateCovRegPlot)
 export(CreateDensity)
-export(DenDist)
 export(DenFMean)
 export(GloCovReg)
 export(GloDenReg)
@@ -13,6 +12,7 @@ export(LocDenReg)
 export(LocSpheReg)
 export(SpheGeoDist)
 export(color.bar)
+export(dist4den)
 importFrom(Matrix,Matrix)
 importFrom(grDevices,colorRampPalette)
 importFrom(grDevices,dev.new)
