correct options listed in the documentation of GloDenReg, add notes to GloDenReg and LocDenReg

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,11 +5,14 @@ export(CovFMean)
 export(CreateCovRegPlot)
 export(CreateDensity)
 export(DenFMean)
+export(GFRCovCholesky)
 export(GloCovReg)
 export(GloDenReg)
+export(LFRCovCholesky)
 export(LocCovReg)
 export(LocDenReg)
 export(color.bar)
+export(dist4cov)
 importFrom(Matrix,Matrix)
 importFrom(grDevices,colorRampPalette)
 importFrom(grDevices,dev.new)
