frechet 0.2.0 pushed to CRAN

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,11 +7,11 @@ export(CreateDensity)
 export(DenFMean)
 export(GloCovReg)
 export(GloDenReg)
-export(LFRCovCholesky)
 export(LocCovReg)
 export(LocDenReg)
 export(color.bar)
 export(dist4cov)
+export(dist4den)
 importFrom(Matrix,Matrix)
 importFrom(grDevices,colorRampPalette)
 importFrom(grDevices,dev.new)
