--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,9 +3,9 @@ Type: Package
 Title: Statistical Analysis for Random Objects and Non-Euclidean Data
 URL: https://github.com/functionaldata/tFrechet
 BugReports: https://github.com/functionaldata/tFrechet/issues
-Version: 0.1.0
+Version: 0.2.0
 Encoding: UTF-8
-Date: 2020-06-09
+Date: 2020-12-15
 Authors@R: 
     c(person(given = "Yaqing",
              family = "Chen",
@@ -47,11 +47,11 @@ LazyData: false
 Imports:
     corrplot,
     fdadensity,
-    fdapace (>= 0.5.3),
+    fdapace (>= 0.5.5),
     Matrix,
     methods,
     pracma,
-    rosqp
+    osqp
 Suggests: 
     Rcpp (>= 0.11.5), 
     testthat
