frechet 0.2.0 + sphere-related codes

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,8 @@ export(GloCovReg)
 export(GloDenReg)
 export(LocCovReg)
 export(LocDenReg)
+export(LocSpheReg)
+export(SpheGeoDist)
 export(color.bar)
 export(dist4cov)
 export(dist4den)
