add global sphe reg; update functions related to sphe reg

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,13 +7,20 @@ export(CreateDensity)
 export(DenFMean)
 export(GloCovReg)
 export(GloDenReg)
+export(GloSpheReg)
 export(LocCovReg)
 export(LocDenReg)
 export(LocSpheReg)
 export(SpheGeoDist)
+export(SpheGeoGrad)
+export(SpheGeoHess)
 export(color.bar)
 export(dist4cov)
 export(dist4den)
+export(expSphere)
+export(frameSphere)
+export(logSphere)
+export(pol2car)
 importFrom(Matrix,Matrix)
 importFrom(grDevices,colorRampPalette)
 importFrom(grDevices,dev.new)
