DensityFAM() updated on 2/27

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(CovFMean)
 export(CreateCovRegPlot)
 export(CreateDensity)
 export(DenFMean)
+export(DensityFAM)
 export(GloCovReg)
 export(GloDenReg)
 export(GloSpheReg)
