--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,15 +4,26 @@ S3method(plot,denReg)
 export(CovFMean)
 export(CreateCovRegPlot)
 export(CreateDensity)
+export(DenANOVA)
+export(DenCPD)
 export(DenFMean)
+export(DenFVar)
+export(GloCorReg)
 export(GloCovReg)
 export(GloDenReg)
+export(LocCorReg)
 export(LocCovReg)
 export(LocDenReg)
+export(NetANOVA)
+export(NetCPD)
+export(NetFVar)
 export(color.bar)
 export(dist4cov)
 export(dist4den)
 importFrom(Matrix,Matrix)
+importFrom(boot,boot)
+importFrom(e1071,rbridge)
+importFrom(fdadensity,dens2quantile)
 importFrom(grDevices,colorRampPalette)
 importFrom(grDevices,dev.new)
 importFrom(grDevices,palette)
@@ -33,6 +44,8 @@ importFrom(graphics,points)
 importFrom(graphics,polygon)
 importFrom(graphics,rect)
 importFrom(graphics,text)
+importFrom(igraph,laplacian_matrix)
+importFrom(igraph,sample_pa)
 importFrom(methods,as)
 importFrom(pracma,trapz)
 importFrom(stats,aggregate)
@@ -53,6 +66,7 @@ importFrom(stats,median)
 importFrom(stats,na.omit)
 importFrom(stats,optim)
 importFrom(stats,optimize)
+importFrom(stats,pchisq)
 importFrom(stats,poly)
 importFrom(stats,predict)
 importFrom(stats,quantile)
