--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,12 +5,19 @@ URL: https://github.com/functionaldata/tFrechet
 BugReports: https://github.com/functionaldata/tFrechet/issues
 Version: 0.3.0
 Encoding: UTF-8
-Date: 2023-12-06
+Date: 2023-12-07
+Language: en-US
 Authors@R: 
     c(person(given = "Yaqing",
              family = "Chen",
              role = c("aut", "cre"),
              email = "yqchen@stat.rutgers.edu"),
+      person(given = "Yidong",
+             family = "Zhou",
+             role = "aut"),
+      person(given = "Han",
+             family = "Chen",
+             role = "aut"),
       person(given = "Alvaro",
              family = "Gajardo",
              role = "aut"),
@@ -28,6 +35,18 @@ Authors@R:
              role = "aut"),
       person(given = "Satarupa",
              family = "Bhattacharjee",
+             role = "aut"),
+      person(given = "Changbo",
+             family = "Zhu",
+             role = "ctb"),
+      person(given = "Su I",
+             family = "Iao",
+             role = "ctb"),
+      person(given = "Poorbita",
+             family = "Kundu",
+             role = "ctb"),
+      person(given = "Petersen",
+             family = "Alexander",
              role = "aut"),
       person(given = "Hans-Georg",
              family = "Müller",
@@ -62,5 +81,6 @@ Suggests:
     Rcpp (>= 0.11.5), 
     testthat,
     igraph,
-    mpoly
-RoxygenNote: 7.1.1
+    mpoly,
+    truncnorm
+RoxygenNote: 7.1.0
