--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,10 +12,12 @@ export(DenFVar)
 export(GloCorReg)
 export(GloCovReg)
 export(GloDenReg)
+export(GloPointPrReg)
 export(GloSpheReg)
 export(LocCorReg)
 export(LocCovReg)
 export(LocDenReg)
+export(LocPointPrReg)
 export(LocSpheReg)
 export(NetANOVA)
 export(NetCPD)
@@ -71,6 +73,7 @@ importFrom(methods,as)
 importFrom(osqp,osqpSettings)
 importFrom(osqp,solve_osqp)
 importFrom(pracma,trapz)
+importFrom(quadprog,solve.QP)
 importFrom(stats,aggregate)
 importFrom(stats,approx)
 importFrom(stats,approxfun)
